# defense-trading-agents

./: .gitignore  README.md  pyproject.toml
config/: agents.yaml  risk.yaml  settings.yaml  sources.yaml
data/: smoke.db  trading.db
data/chroma/: chroma.sqlite3
data/chroma_smoke/: chroma.sqlite3
data/chroma_smoke_phase2/: chroma.sqlite3
data/chroma_smoke_phase2b/: chroma.sqlite3
docs/: EXECUTION_ARCHITECTURE.md
examples/: execution_example.py
scripts/: run_all_scanners_once.py  run_phase3_discussion_demo.py  run_phase4_ragas_demo.py  run_phase5_end_to_end_demo.py  test_ibkr.py
src/: __init__.py  exceptions.py  logging_setup.py  main.py
src/agents/: __init__.py  agent.py  orchestrator.py  tools.py
src/config/: __init__.py  loader.py
src/data/: company_fundamentals.json  earnings_blackout_calendar.json
src/evaluation/: __init__.py  ragas.py
src/execution/: __init__.py  executor.py  ibkr.py  orders.py  risk.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  agent.py  config.py  core.py  evaluation.py  llm.py
src/processing/: __init__.py  ner.py  scoring.py  sentiment.py
src/scanners/: __init__.py  base.py  capitol_trades.py  defense_gov_rss.py  dsca.py  factory.py  fred.py  gao.py  google_news.py  sam_gov.py  sec_edgar.py  truth_social.py
src/storage/: __init__.py  db.py  fact_store.py
tests/: test_execution.py
